add remove pics other projects section

--- a/project-detail.html
+++ b/project-detail.html
@@ -344,10 +344,9 @@
                                     <img src="images/projects/square/pic4.jpg" alt="">
                                 </div>
                                 <div class="mt-info p-a30">
-                                    <h4 class="m-b20 m-t0"><a href="javascript:void(0);">Delivering architecture,
-                                            planning, and design.</a></h4>
-                                    <p>Morbi mattis ex non urna condim entum, eget eleifend diam molestie. Curabitur
-                                        lorem enim</p>
+                                    <h4 class="m-b20 m-t0"><a href="javascript:void(0);">Предоставяне на архитектура, планиране и дизайн.</a></h4>
+                                    <p>Яуандо луцилиус хендрерит те яуи, ат мовет салутатус волуптариа вим, виртуте алтерум хас ат. Суас дуис мел ид. Сит еа десеруиссе аппеллантур. Дицта цонсулату вих ид, алии ирацундиа цонсеяуат сеа не.
+</p>
                                     <a href="#" class="site-button btn-effect">Още</a>
                                 </div>
                             </div>
@@ -359,8 +358,8 @@
                                 <div class="mt-info p-a30">
                                     <h4 class="m-b20 m-t0"><a href="javascript:void(0);">Capitalizing on the unique
                                             qualities of each place.</a></h4>
-                                    <p>Morbi mattis ex non urna condim entum, eget eleifend diam molestie. Curabitur
-                                        lorem enim</p>
+                                    <p>Яуандо луцилиус хендрерит те яуи, ат мовет салутатус волуптариа вим, виртуте алтерум хас ат. Суас дуис мел ид. Сит еа десеруиссе аппеллантур. Дицта цонсулату вих ид, алии ирацундиа цонсеяуат сеа не.
+</p>
                                     <a href="#" class="site-button btn-effect">Още</a>
                                 </div>
                             </div>
@@ -372,8 +371,8 @@
                                 <div class="mt-info p-a30">
                                     <h4 class="m-b20 m-t0"><a href="javascript:void(0);">Delivering architecture,
                                             planning, and design.</a></h4>
-                                    <p>Morbi mattis ex non urna condim entum, eget eleifend diam molestie. Curabitur
-                                        lorem enim</p>
+                                    <p>Яуандо луцилиус хендрерит те яуи, ат мовет салутатус волуптариа вим, виртуте алтерум хас ат. Суас дуис мел ид. Сит еа десеруиссе аппеллантур. Дицта цонсулату вих ид, алии ирацундиа цонсеяуат сеа не.
+</p>
                                     <a href="#" class="site-button btn-effect">Още</a>
                                 </div>
                             </div>
@@ -385,8 +384,8 @@
                                 <div class="mt-info  p-a30">
                                     <h4 class="m-b20 m-t0"><a href="javascript:void(0);">Improving quality of life with
                                             an integrated unified.</a></h4>
-                                    <p>Morbi mattis ex non urna condim entum, eget eleifend diam molestie. Curabitur
-                                        lorem enim</p>
+                                    <p>Яуандо луцилиус хендрерит те яуи, ат мовет салутатус волуптариа вим, виртуте алтерум хас ат. Суас дуис мел ид. Сит еа десеруиссе аппеллантур. Дицта цонсулату вих ид, алии ирацундиа цонсеяуат сеа не.
+</p>
                                     <a href="#" class="site-button btn-effect">Още</a>
                                 </div>
                             </div>
@@ -398,8 +397,8 @@
                                 <div class="mt-info p-a30">
                                     <h4 class="m-b20 m-t0"><a href="javascript:void(0);">Unique solutions for your home
                                             through.</a></h4>
-                                    <p>Morbi mattis ex non urna condim entum, eget eleifend diam molestie. Curabitur
-                                        lorem enim</p>
+                                    <p>Яуандо луцилиус хендрерит те яуи, ат мовет салутатус волуптариа вим, виртуте алтерум хас ат. Суас дуис мел ид. Сит еа десеруиссе аппеллантур. Дицта цонсулату вих ид, алии ирацундиа цонсеяуат сеа не.
+</p>
                                     <a href="#" class="site-button btn-effect">Още</a>
                                 </div>
                             </div>
