removed some pictures more projects

--- a/project-detail.html
+++ b/project-detail.html
@@ -341,7 +341,7 @@
                             <!-- COLUMNS 1 -->
                             <div class="item mt-box">
                                 <div class="mt-img-effect mt-img-overlay7">
-                                    <img src="images/projects/square/pic4.jpg" alt="">
+                                    <img src="images/projects/square/pic2.jpeg" alt="">
                                 </div>
                                 <div class="mt-info p-a30">
                                     <h4 class="m-b20 m-t0"><a href="javascript:void(0);">Предоставяне на архитектура, планиране и дизайн.</a></h4>
@@ -353,7 +353,7 @@
                             <!-- COLUMNS 2 -->
                             <div class="item mt-box">
                                 <div class="mt-img-effect mt-img-overlay7">
-                                    <img src="images/projects/square/pic7.jpg" alt="">
+                                    <img src="images/projects/square/pic7.jpeg" alt="">
                                 </div>
                                 <div class="mt-info p-a30">
                                     <h4 class="m-b20 m-t0"><a href="javascript:void(0);">Capitalizing on the unique
@@ -366,7 +366,7 @@
                             <!-- COLUMNS 3 -->
                             <div class="item mt-box">
                                 <div class="mt-img-effect mt-img-overlay7">
-                                    <img src="images/projects/square/pic5.jpg" alt="">
+                                    <img src="images/projects/square/pic5.jpeg" alt="">
                                 </div>
                                 <div class="mt-info p-a30">
                                     <h4 class="m-b20 m-t0"><a href="javascript:void(0);">Delivering architecture,
@@ -379,7 +379,7 @@
                             <!-- COLUMNS 4 -->
                             <div class="item mt-box">
                                 <div class="mt-img-effect mt-img-overlay7">
-                                    <img src="images/projects/square/pic6.jpg" alt="">
+                                    <img src="images/projects/square/pic6.jpeg" alt="">
                                 </div>
                                 <div class="mt-info  p-a30">
                                     <h4 class="m-b20 m-t0"><a href="javascript:void(0);">Improving quality of life with
@@ -392,7 +392,7 @@
                             <!-- COLUMNS 5 -->
                             <div class="item mt-box">
                                 <div class="mt-img-effect mt-img-overlay7">
-                                    <img src="images/projects/square/pic3.jpg" alt="">
+                                    <img src="images/projects/square/pic3.jpeg" alt="">
                                 </div>
                                 <div class="mt-info p-a30">
                                     <h4 class="m-b20 m-t0"><a href="javascript:void(0);">Unique solutions for your home
