fixed some  social lincs multi-pages

--- a/project-detail.html
+++ b/project-detail.html
@@ -306,10 +306,7 @@
                                 </div>
                                 <ul class="social-icons social-square social-darkest m-b0">
                                     <li><a href="https://www.facebook.com" class="fa fa-facebook"></a></li>
-                                    <li><a href="https://twitter.com" class="fa fa-twitter"></a></li>
-                                    <li><a href="https://rss.com" class="fa fa-rss"></a></li>
-                                    <li><a href="https://www.youtube.com" class="fa fa-youtube"></a></li>
-                                    <li><a href="https://in.linkedin.com" class="fa fa-instagram"></a></li>
+                                    <li><a href="https://instagram.com" class="fa fa-instagram"></a></li>
                                 </ul>
                             </div>
                         </div>
