--- a/project-grid.html
+++ b/project-grid.html
@@ -142,12 +142,6 @@
                                             <li>
                                                 <a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
                                             </li>
-                                            <li>
-                                                <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
-                                            </li>
-                                            <li>
-                                                <a href="#" class="youtube"><i class="fa fa-youtube"></i></a>
-                                            </li>
                                         </ul>
                                     </div>
                                 </div>
@@ -457,11 +451,8 @@
                                     сем.Иванови</p>
 
                                 <ul class="social-icons  mt-social-links">
-                                    <li><a href="https://www.google.com" class="fa fa-google"></a></li>
-
                                     <li><a href="https://www.facebook.com" class="fa fa-facebook"></a></li>
-                                    <li><a href="https://twitter.com" class="fa fa-twitter"></a></li>
-                                    <li><a href="https://in.linkedin.com" class="fa fa-linkedin"></a></li>
+                                    <li><a href="https://instagram.com" class="fa fa-instagram"></a></li>
                                 </ul>
                             </div>
                         </div>
