--- a/services.html
+++ b/services.html
@@ -144,7 +144,6 @@
                                         <ul>
                                             <li><a href="#" class="facebook"><i class="fa fa-facebook"></i></a></li>
                                             <li><a href="#" class="instagram"><i class="fa fa-instagram"></i></a></li>
-
                                         </ul>
                                     </div>
 
@@ -873,13 +872,10 @@
                                         креативност и опит вие ни дадохте най-красивата къща. Изглежда страхотно!" -
                                         сем.Иванови</p>
 
-                                    <ul class="social-icons  mt-social-links">
-                                        <li><a href="https://www.google.com" class="fa fa-google"></a></li>
-
-                                        <li><a href="https://www.facebook.com" class="fa fa-facebook"></a></li>
-                                        <li><a href="https://twitter.com" class="fa fa-twitter"></a></li>
-                                        <li><a href="https://in.linkedin.com" class="fa fa-linkedin"></a></li>
-                                    </ul>
+                                        <ul class="social-icons  mt-social-links">
+                                            <li><a href="https://www.facebook.com" class="fa fa-facebook"></a></li>
+                                            <li><a href="https://instagram.com" class="fa fa-instagram"></a></li>
+                                        </ul>
                                 </div>
                             </div>
 
