--- a/project-detail.html
+++ b/project-detail.html
@@ -466,11 +466,8 @@
                                     сем.Иванови</p>
 
                                 <ul class="social-icons  mt-social-links">
-                                    <li><a href="https://www.google.com" class="fa fa-google"></a></li>
-
                                     <li><a href="https://www.facebook.com" class="fa fa-facebook"></a></li>
-                                    <li><a href="https://twitter.com" class="fa fa-twitter"></a></li>
-                                    <li><a href="https://in.linkedin.com" class="fa fa-linkedin"></a></li>
+                                    <li><a href="https://instagram.com" class="fa fa-instagram"></a></li>
                                 </ul>
                             </div>
                         </div>
