--- a/contact.html
+++ b/contact.html
@@ -258,10 +258,10 @@
                                             </div>
 
                                             <div class="text-right">
-                                                <button name="submit" type="submit" value="Submit"
+                                                <!-- <button name="submit" type="submit" value="Submit"
                                                     class="site-button btn-effect">
                                                     изпрати
-                                                </button>
+                                                </button> -->
                                             </div>
                                         </div>
                                     </div>
