update address on contact page

--- a/contact.html
+++ b/contact.html
@@ -307,7 +307,7 @@
                                             </div>
                                             <div class="icon-content">
                                                 <h5 class="m-t0 font-weight-500">Адрес</h5>
-                                                <p>ул.Пирин, кв.Ветрен, 8127, Бургас</p>
+                                                <p>бул. Сан Стефано 107, гр. Бургас</p>
                                             </div>
                                         </div>
                                     </div>
