update links get offer on services

--- a/services.html
+++ b/services.html
@@ -254,7 +254,7 @@
 
 
                                         </p>
-                                        <a href="services.html" class="site-button-link" data-hover="Read More">ВЗЕМИ
+                                        <a href="contact.html" class="site-button-link" data-hover="Read More">ВЗЕМИ
                                             ОФЕРТА<i class="fa fa-angle-right arrow-animation"></i></a>
                                     </div>
                                 </div>
@@ -273,7 +273,7 @@
                                             получава от тези дейности. За всичко това може да се обърнете към нас. Ние
                                             идваме, къртим, събираме боклука, след което го изхвърляме на определените
                                             за целта места.</p>
-                                        <a href="services.html" class="site-button-link" data-hover="Read More">ВЗЕМИ
+                                        <a href="contact.html" class="site-button-link" data-hover="Read More">ВЗЕМИ
                                             ОФЕРТА<i class="fa fa-angle-right arrow-animation"></i></a>
                                     </div>
                                 </div>
@@ -298,7 +298,7 @@
                                             <li>тухла.</li>
                                         </ul>
                                         </p>
-                                        <a href="services.html" class="site-button-link" data-hover="Read More">ВЗЕМИ
+                                        <a href="contact.html" class="site-button-link" data-hover="Read More">ВЗЕМИ
                                             ОФЕРТА<i class="fa fa-angle-right arrow-animation"></i></a>
                                     </div>
                                 </div>
@@ -316,7 +316,7 @@
                                             водопроводни услуги в Бургас и региона на едни от най-добрите цени в
                                             бранша.При нас работят висококвалифицирани водопроводчици, на които можете
                                             да разчитате.</p>
-                                        <a href="services.html" class="site-button-link" data-hover="Read More">ВЗЕМИ
+                                        <a href="contact.html" class="site-button-link" data-hover="Read More">ВЗЕМИ
                                             ОФЕРТА<i class="fa fa-angle-right arrow-animation"></i></a>
                                     </div>
                                 </div>
@@ -337,7 +337,7 @@
                                             специфичните нужди на сградата, нейните особености и предназначение, за да
                                             открием най-добрите опции за електроизграждане, които Ви гарантират
                                             сигурност и дълготрайност.</p>
-                                        <a href="services.html" class="site-button-link" data-hover="Read More">ВЗЕМИ
+                                        <a href="contact.html" class="site-button-link" data-hover="Read More">ВЗЕМИ
                                             ОФЕРТА<i class="fa fa-angle-right arrow-animation"></i></a>
                                     </div>
                                 </div>
@@ -359,7 +359,7 @@
                                             Декоративните мазилки може да разгледате от нашите каталози при оглед на
                                             място.
                                         </p>
-                                        <a href="services.html" class="site-button-link" data-hover="Read More">ВЗЕМИ
+                                        <a href="contact.html" class="site-button-link" data-hover="Read More">ВЗЕМИ
                                             ОФЕРТА<i class="fa fa-angle-right arrow-animation"></i></a>
                                     </div>
                                 </div>
@@ -377,7 +377,7 @@
                                         <p>Със стартирането на този етап от строително-ремонтните работи започват
                                             финните довършителни работи. Тук прецизността и професионализма на нашите
                                             майстори е огромен и всичко се изпипва до съвършенство.</p>
-                                        <a href="services.html" class="site-button-link" data-hover="Read More">ВЗЕМИ
+                                        <a href="contact.html" class="site-button-link" data-hover="Read More">ВЗЕМИ
                                             ОФЕРТА<i class="fa fa-angle-right arrow-animation"></i></a>
                                     </div>
                                 </div>
@@ -393,7 +393,7 @@
                                         <p>Ще Ви помогнем с избора на цвят като покажем примери и каталози.Ще съчетаем
                                             заедно с Вас цвета на всяка стена с мебелите, за да направим мечтаното място
                                             за почивка,отдих,работа или за каквото и да е.</p>
-                                        <a href="services.html" class="site-button-link" data-hover="Read More">ВЗЕМИ
+                                        <a href="contact.html" class="site-button-link" data-hover="Read More">ВЗЕМИ
                                             ОФЕРТА<i class="fa fa-angle-right arrow-animation"></i></a>
                                     </div>
                                 </div>
@@ -415,7 +415,7 @@
                                             цветове и шарки. Това значително съкращава сроковете на строителните работи
                                             и влизането в експлоатация.
                                         </p>
-                                        <a href="services.html" class="site-button-link" data-hover="Read More">ВЗЕМИ
+                                        <a href="contact.html" class="site-button-link" data-hover="Read More">ВЗЕМИ
                                             ОФЕРТА<i class="fa fa-angle-right arrow-animation"></i></a>
                                     </div>
                                 </div>
@@ -434,7 +434,7 @@
                                             залепи гранитогреса в коридора и в кухнята, но и за там няма човек?! Потърси
                                             нас и ние ще направим нужното, за да останете доволни от добре свършената
                                             работа.</p>
-                                        <a href="services.html" class="site-button-link" data-hover="Read More">ВЗЕМИ
+                                        <a href="contact.html" class="site-button-link" data-hover="Read More">ВЗЕМИ
                                             ОФЕРТА<i class="fa fa-angle-right arrow-animation"></i></a>
                                     </div>
                                 </div>
@@ -454,7 +454,7 @@
                                             на пазара. Ще се съобразим с желанията,които имате и ще предложим и изпълним
                                             най-доброто за Вас.
                                         </p>
-                                        <a href="services.html" class="site-button-link" data-hover="Read More">ВЗЕМИ
+                                        <a href="contact.html" class="site-button-link" data-hover="Read More">ВЗЕМИ
                                             ОФЕРТА<i class="fa fa-angle-right arrow-animation"></i></a>
                                     </div>
                                 </div>
@@ -473,7 +473,7 @@
                                         <p>Може да предложим изработка, доставка и монтаж на всякакви видове дограми за
                                             Вашия апартамент, къща, офис.
                                         </p>
-                                        <a href="services.html" class="site-button-link" data-hover="Read More">ВЗЕМИ
+                                        <a href="contact.html" class="site-button-link" data-hover="Read More">ВЗЕМИ
                                             ОФЕРТА<i class="fa fa-angle-right arrow-animation"></i></a>
                                     </div>
                                 </div>
@@ -495,7 +495,7 @@
                                             предложим най-добрите специалисти и перфектно изпълнение на хидроизолацията
                                             за вашия покрив.
                                         </p>
-                                        <a href="services.html" class="site-button-link" data-hover="Read More">ВЗЕМИ
+                                        <a href="contact.html" class="site-button-link" data-hover="Read More">ВЗЕМИ
                                             ОФЕРТА<i class="fa fa-angle-right arrow-animation"></i></a>
                                     </div>
                                 </div>
@@ -516,7 +516,7 @@
                                             естествено от качеството на самата изолация. С помощта на нашите специалисти
                                             ще направим заедно най-добрия избор за Вас.
                                         </p>
-                                        <a href="services.html" class="site-button-link" data-hover="Read More">ВЗЕМИ
+                                        <a href="contact.html" class="site-button-link" data-hover="Read More">ВЗЕМИ
                                             ОФЕРТА<i class="fa fa-angle-right arrow-animation"></i></a>
                                     </div>
                                 </div>
